# downie-to-stash-import

./: .gitignore  README.md  WORKFLOW.md  cli.py  core.py  gui_app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
packaging/: build_mac.sh  downie_stash.spec
src/downie_to_stash/: __init__.py  cli.py  core.py  gui_app.py
tests/: conftest.py  test_cli.py  test_core_integration.py  test_core_unit.py
